chore: implement conversion for positional params